Set up title and favico

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 
   <head>
-    <link href="cssreset.css"  rel="stylesheet">
-    <link href="style.css"  rel="stylesheet">
+    <link href="assets/stylesheets/cssreset.css"  rel="stylesheet">
+    <link href="assets/stylesheets/style.css"  rel="stylesheet">
     <meta charset="utf-8">
-    <title>Naslov u tabu</title>
-    <link rel="icon" type="image/png" href="url">  <!--ovdi ide onaj favico-->
+    <title>Contributing to Open Source Part I: The Easy Way-YouTube</title>
+    <link rel="icon" type="image/png" href="assets/images/YouTube-icon.png">  <!--ovdi ide onaj favico-->
   </head>
 
   <body>
+
 
   </body>
 
