Add top logos and embed video

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
   </head>
 
   <body>
+    <header>
+      <img class="small-icon" src="assets/images/menu.png" type="image/png">
+      <img class="small-icon" src="assets/images/ytlogo.png" type="image/png">
+      <input type="text">
+      <span class="small-icon right signin">SIGN IN</span>
+      <img class="small-icon right" src="assets/images/dots.png" type="image/png">
+      <img class="small-icon right" src="assets/images/squares.png" type="image/png">
+      <img class="small-icon right" src="assets/images/camera.png" type="image/png">
 
+    </header>
+    <section>
+      <span class="main">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </span>
+      <aside class="popis">
+      </aside>
+    </section>
 
   </body>
 
