--- a/index.html
+++ b/index.html
@@ -23,8 +23,23 @@
     <section>
       <span class="main">
         <iframe width="853" height="480" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <h1>Again, could fill this part, but I wouldn't learn anything new so I'm skiping it :*</h1>
       </span>
       <aside class="popis">
+        <ul>
+          <li><img src="assets/images/slika1.jpg" class="slikica"> <h5>Video broj 1</h5> Neki komentarcic</li>
+          <li><img src="assets/images/slika2.jpg" class="slikica"> <h5>Video broj 2</h5> Bla bla bla</li>
+          <li><img src="assets/images/slika3.png" class="slikica"> <h5>Video broj 3</h5> Jos jedan</li>
+          <li><img src="assets/images/slika1.jpg" class="slikica"> <h5>Video broj 1</h5> Neki komentarcic</li>
+          <li><img src="assets/images/slika2.jpg" class="slikica"> <h5>Video broj 2</h5> Bla bla bla</li>
+          <li><img src="assets/images/slika3.png" class="slikica"> <h5>Video broj 3</h5> Jos jedan</li>
+          <li><img src="assets/images/slika1.jpg" class="slikica"> <h5>Video broj 1</h5> Neki komentarcic</li>
+          <li><img src="assets/images/slika2.jpg" class="slikica"> <h5>Video broj 2</h5> Bla bla bla</li>
+          <li><img src="assets/images/slika3.png" class="slikica"> <h5>Video broj 3</h5> Jos jedan</li>
+          <li><img src="assets/images/slika1.jpg" class="slikica"> <h5>Video broj 1</h5> Neki komentarcic</li>
+          <li><img src="assets/images/slika2.jpg" class="slikica"> <h5>Video broj 2</h5> Bla bla bla</li>
+          <li><img src="assets/images/slika3.png" class="slikica"> <h5>Video broj 3</h5> Jos jedan</li>
+        </ul>
       </aside>
     </section>
 
