--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <span class="main">
         <iframe width="853" height="480" src="https://www.youtube.com/embed/V74l_zS1x8E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <h1>Again, could fill this part, but I wouldn't learn anything new so I'm skiping it :*</h1>
+        <h1>Again, could fill this part, but I wouldn't learn anything new so I'm skipping it :*</h1>
       </span>
       <aside class="popis">
         <ul>
